# mind-model

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: README.md
src/mind_model/: eval_harness.py  oscillation.py  persistence.py  vector_backend.py
src/mind_model/assemblies/: cell_ensemble_rt.py
src/mind_model/concepts/: concept.py  concept_decoder.py  feature_ensemble.py  feature_unit.py  seed_concepts.py
src/mind_model/graphs/: graph_view.py
src/mind_model/manipulations/: manipulations.py
src/mind_model/relationships/: relationships.py
src/mind_model/utils/: relations_utils.py
tools/: README.md  gui_app_streamlit.py
