[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mind-model"
version = "0.1.0"
description = "Cognitive mind model simulation and experimentation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Otto Lecuona" }]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
